[SYTO-820-2] add story unit test back in, fix alignment of cta at certain breakpoints (#307)

--- a/src/modules/promocard/_styles.scss
+++ b/src/modules/promocard/_styles.scss
@@ -147,6 +147,7 @@ $mt3_gradientIndex: 3;
     position: absolute;
     text-align: left;
     top: 8px;
+    transition: none;
     z-index: $mt3_z-middle + 3;
 
     &-icon {
